package com.anmory.cloudfile.ai;

import java.util.Optional;

/**
 * @author Anmory
 * @description TODO
 * @date 2025-05-13 下午2:42
 */

public abstract class AbstractAi {
    public abstract String getAiResult(String content);
}
