package com.anmory.cloudfile.ai;

/**
 * @author Anmory
 * @description TODO
 * @date 2025-05-13 下午2:48
 */

public abstract class AbstractAiFactory {
    public abstract AbstractAi getAi(String type);
}
